# csv_wizard_web

./: .gitignore  .pdm.toml  db.sqlite3  manage.py  pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_managers.py
csv_wizard_api/: .env  asgi.py  settings.py  urls.py  views.py  wsgi.py
file_handling/: models.py  serializers.py  urls.py  views.py
file_handling/migrations/: 0001_initial.py  0002_alter_file_size.py  0003_file_operation_name.py
results_files/user1/slice/: test_file_backup-user1_FIRST_HALF.csv  test_file_backup-user1_SECOND_HALF.csv
